# tile-map-manager

./: .gitignore  AnimatedTile.cpp  CMakeLists.txt  Game.cpp  Game.hpp  PropertyTile.cpp  PropertyTile.hpp  README.md  Tile.cpp  Tile.hpp  TileAnimation.cpp  TileLayer.cpp  TileMap.cpp  TileMapManager.cpp  Tileset.cpp  Tileset.hpp  main.cpp
include/: AnimatedTile.hpp  Game.hpp  TileAnimation.hpp  TileLayer.hpp  TileMap.hpp  TileMapManager.hpp
map/: example.tmx
map/tilesets/: atlas.tsx
src/: AnimatedTile.cpp  Game.cpp  PropertyTile.cpp  Tile.cpp  TileAnimation.cpp  TileLayer.cpp  TileMap.cpp  TileMapManager.cpp  Tileset.cpp
